# agent-observer

./: .env.example  .gitignore  ANALYZER_IMPROVEMENTS.md  CHANGES_SUMMARY.md  COMPLETE_SUMMARY.md  DELIVERY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  NEW_FEATURES.md  PERMISSIONS_CORRECT_APPROACH.md  PERMISSIONS_IMPLEMENTATION.md  PERMISSIONS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  examples.py  pyproject.toml  test_analyzer.py  test_analyzer_templates.py  test_integration.py  test_permissions.py  test_permissions_v2.py  test_visualizer.py
agentob/: __init__.py  __main__.py  analyzer.py  cli.py  decoder.py  parser.py  simplify.py  visualizer.py  wrapper.py
agentob/prompts/: README.md  assistant_text_prompt.txt  assistant_thinking_prompt.txt  tool_calls_prompt.txt  tool_result_prompt.txt  user_message_prompt.txt
permissions/: DESIGN.md  DESIGN_REVISED.md  __init__.py  loader.py  validator.py  validator_v2.py
permissions/models/: claude_code.json  default.json  openclaw.json
permissions/parsers/: __init__.py  claude_code.py
