[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentob"
version = "0.1.0"
description = "Agent execution observation tool for capturing and analyzing LLM agent interactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent Observer Team"}
]
keywords = ["agent", "llm", "observability", "mitmproxy", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mitmproxy>=10.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agentob = "agentob.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/agent-observer"
Repository = "https://github.com/yourusername/agent-observer"

[tool.setuptools]
packages = ["agentob"]
